[project]
name = "bolt-python-support-agent-claude"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "slack-sdk==3.41.0",
    "slack-bolt>=1.28.0",
    "slack-cli-hooks<1.0.0",
    "claude-agent-sdk>=0.1.61",
    "aiohttp>=3.13.5",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
dev = [
    "bolt-python-support-agent-claude[test]",
    "ruff==0.15.12",
]

[tool.setuptools.packages.find]
include = ["agent*", "listeners*", "thread_context*"]

[tool.ruff]
[tool.ruff.lint]
[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
